[gd_scene load_steps=25 format=3 uid="uid://bvt7e871e6jeg"]

[ext_resource type="Script" uid="uid://ct5f725uu181o" path="res://Scenes/NPC's/Enemy/Scripts/EnemyMain.gd" id="1_db41y"]
[ext_resource type="Texture2D" uid="uid://ch1b21rmmihg0" path="res://Assets/Characters/mafia_boss-removebg-preview.png" id="2_jnymf"]
[ext_resource type="PackedScene" uid="uid://b82yimbxiflml" path="res://Art/Particles/hit_particles.tscn" id="21_d5isq"]
[ext_resource type="Script" uid="uid://cast13xsxfr0t" path="res://Scripts/FSM/FiniteStateMachine.gd" id="21_mb2dn"]
[ext_resource type="Script" uid="uid://oqma142unvrc" path="res://Scenes/NPC's/Enemy/Scripts/States/EnemyIdleState.gd" id="21_mks5l"]
[ext_resource type="Script" uid="uid://d04v5qhgiv3dk" path="res://Scenes/NPC's/Enemy/Scripts/States/EnemyChaseState.gd" id="24_pg8mu"]
[ext_resource type="Script" uid="uid://bbbpc8yw2w2as" path="res://Scenes/NPC's/Enemy/Scripts/States/EnemyAttackState.gd" id="25_osvb1"]
[ext_resource type="Script" uid="uid://j3kii7lflh76" path="res://Scripts/AttackData.gd" id="26_b28qd"]
[ext_resource type="Texture2D" uid="uid://bw36ig60cpuaq" path="res://Art/Sprites/Square.png" id="27_0oljh"]
[ext_resource type="Script" uid="uid://cajpd041va7ti" path="res://Scenes/NPC's/Enemy/Scripts/States/EnemyDeathState.gd" id="27_m2jmx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cqf5a"]
size = Vector2(16.5, 20.375)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_e04wa"]
cull_mode = 2
polygon = PackedVector2Array(3, -8, 6.5, -4, 7.5, 3.5, 4.5, 10, -1.5, 10.5, -6, 4, -4.5, -6, -1, -8.5)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_4mbmt"]
radius = 7.0
height = 20.0

[sub_resource type="CircleShape2D" id="CircleShape2D_imcar"]
radius = 548.004

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x6b3o"]
bg_color = Color(0.0352941, 0.0156863, 0.00784314, 0.427451)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w435t"]
bg_color = Color(1, 0, 0, 1)

[sub_resource type="Curve" id="Curve_aelqt"]
_data = [Vector2(0, 1), 0.0, 0.0278013, 0, 0, Vector2(0.331081, 0.373626), 0.0, 0.0, 0, 0, Vector2(1, 0), -3.11722, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_dwv2q"]
curve = SubResource("Curve_aelqt")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_6o6nb"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 6.5
angle_min = -90.0
angle_max = 90.0
direction = Vector3(0, -1, 0)
initial_velocity_min = 40.0
initial_velocity_max = 80.0
gravity = Vector3(0, 98, 0)
color = Color(0, 0, 0, 1)
alpha_curve = SubResource("CurveTexture_dwv2q")

[sub_resource type="Animation" id="Animation_pya5h"]
resource_name = "Attack"
length = 2.0
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Attack"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5, 0.65, 0.8, 1, 1.1, 1.25, 1.95),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 7]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D/HitBox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("FSM/enemy_attack_state")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.8),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"play_hitground_sound"
}]
}

[sub_resource type="Animation" id="Animation_vh18e"]
resource_name = "Chasing"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Walk"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_1r6mx"]
resource_name = "Death"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Death"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BodyCollider:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_lw05y"]
resource_name = "Idle"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_i1jlq"]
_data = {
&"Attack": SubResource("Animation_pya5h"),
&"Chasing": SubResource("Animation_vh18e"),
&"Death": SubResource("Animation_1r6mx"),
&"Idle": SubResource("Animation_lw05y")
}

[node name="Enemy" type="CharacterBody2D" node_paths=PackedStringArray("attack_node", "chase_node", "healthbar", "hit_particles") groups=["Enemy"]]
texture_filter = 1
scale = Vector2(2, 2)
script = ExtResource("1_db41y")
attack_node = NodePath("FSM/enemy_attack_state")
chase_node = NodePath("FSM/enemy_chase_state")
healthbar = NodePath("ProgressBar")
health = 75
flipped_horizontal = true
hit_particles = NodePath("HitParticles")

[node name="AnimatedSprite2D" type="CharacterBody2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="AnimatedSprite2D"]
scale = Vector2(0.0264236, 0.0391142)
texture = ExtResource("2_jnymf")

[node name="HitBox" type="Area2D" parent="AnimatedSprite2D"]
position = Vector2(-21, -15.5)
scale = Vector2(3.30869, 2.28826)

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatedSprite2D/HitBox"]
position = Vector2(0.5, 1.5)
shape = SubResource("RectangleShape2D_cqf5a")
disabled = true

[node name="HitParticles" parent="AnimatedSprite2D" instance=ExtResource("21_d5isq")]

[node name="LightOccluder2D" type="LightOccluder2D" parent="AnimatedSprite2D"]
occluder = SubResource("OccluderPolygon2D_e04wa")

[node name="BodyCollider" type="CollisionShape2D" parent="."]
position = Vector2(1, 1.5)
shape = SubResource("CapsuleShape2D_4mbmt")

[node name="DetectionArea" type="Area2D" parent="."]

[node name="DetectionShape" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_imcar")

[node name="FSM" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("21_mb2dn")
initial_state = NodePath("enemy_idle_state")

[node name="enemy_idle_state" type="Node" parent="FSM" node_paths=PackedStringArray("animator")]
script = ExtResource("21_mks5l")
animator = NodePath("../../AnimationPlayer")

[node name="enemy_chase_state" type="Node" parent="FSM" node_paths=PackedStringArray("animator")]
script = ExtResource("24_pg8mu")
animator = NodePath("../../AnimationPlayer")

[node name="enemy_attack_state" type="Node" parent="FSM" node_paths=PackedStringArray("attack", "animator")]
script = ExtResource("25_osvb1")
attack = NodePath("MainAttack")
animator = NodePath("../../AnimationPlayer")

[node name="MainAttack" type="Node" parent="FSM/enemy_attack_state"]
script = ExtResource("26_b28qd")
anim = "Attack"
damage = 30

[node name="enemy_death_state" type="Node" parent="FSM" node_paths=PackedStringArray("animator")]
script = ExtResource("27_m2jmx")
animator = NodePath("../../AnimationPlayer")

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_left = -8.0
offset_top = -9.0
offset_right = -5.0
offset_bottom = 18.0
rotation = -1.57079
scale = Vector2(0.72, 0.659998)
theme_override_styles/background = SubResource("StyleBoxFlat_x6b3o")
theme_override_styles/fill = SubResource("StyleBoxFlat_w435t")
step = 1.0
value = 51.0
fill_mode = 2
show_percentage = false

[node name="HitParticles" type="GPUParticles2D" parent="."]
emitting = false
amount = 60
texture = ExtResource("27_0oljh")
one_shot = true
explosiveness = 0.9
process_material = SubResource("ParticleProcessMaterial_6o6nb")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_i1jlq")
}
autoplay = "Idle"

[connection signal="body_entered" from="AnimatedSprite2D/HitBox" to="FSM/enemy_attack_state" method="_on_hit_box_body_entered"]
[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
